# NextMove

./: .gitignore
nextmove_code_source/av_nav/: README.md
nextmove_code_source/av_nav/av_path_speed_analyzer/: README.md  package.xml  paramSpeedAnalyzer.yaml  setup.cfg  setup.py
nextmove_code_source/av_nav/av_path_speed_analyzer/av_path_speed_analyzer/: obstacle_detect.py  profile_generator.py  speed_analyzer.py
nextmove_code_source/av_nav/av_path_speed_analyzer_interface/: CMakeLists.txt  README.md  package.xml
nextmove_code_source/av_nav/av_path_speed_analyzer_interface/srv/: SpeedProfileGen.srv
nextmove_code_source/av_nav/follow_waypoint/: CMakeLists.txt  package.xml
nextmove_code_source/av_nav/follow_waypoint/include/: math_utils.hpp  msg_conversion.hpp  zoe_follow_waypoint.hpp
nextmove_code_source/av_nav/follow_waypoint/meshes/: zoe.dae
nextmove_code_source/av_nav/follow_waypoint/src/: math_utils.cpp  zoe_follow_waypoint.cpp
nextmove_code_source/av_nav/follow_waypoint/urdf/: zoe.urdf
nextmove_code_source/av_nav/gps_path_following/: README.md  XY_follow_doc.md  package.xml  setup.cfg  setup.py
nextmove_code_source/av_nav/gps_path_following/zoe_gps_waypoint/: file_operations.py  gps_to_XY_point.py  gps_to_XY_point_q.py  map_loader.py  quaternion_and_euler.py
nextmove_code_source/av_nav/gps_path_following/zoe_gps_waypoint/config/: map_loader_config.yaml
nextmove_code_source/av_nav/gps_path_following/zoe_gps_waypoint/launch/: map_loader.launch.py
nextmove_code_source/av_nav/zoe_waypoint_interfaces/: CMakeLists.txt  package.xml
nextmove_code_source/av_nav/zoe_waypoint_interfaces/srv/: ChangePath.srv  GetPath.srv  GetPathList.srv
nextmove_code_source/can_zoe/: CMakeLists.txt  README.md  package.xml
nextmove_code_source/can_zoe/dbc/zoe_ze40/: zoe_ze40.dbc
nextmove_code_source/can_zoe/dbc/zoe_ze50/: zoe_ze50.dbc
nextmove_code_source/can_zoe/include/: can_decoder.hpp  can_encoder.hpp  vehicle_command.hpp  zoe_control.hpp
nextmove_code_source/can_zoe/include/ze40/: can_ze40.h  can_ze40_decoder.hpp  can_ze40_encoder.hpp
nextmove_code_source/can_zoe/include/ze50/: can_ze50.hpp  can_ze50_decoder.hpp  can_ze50_encoder.hpp  ze50_vehicle_command.hpp
nextmove_code_source/can_zoe/src/: can_encoder.cpp  speed_controller.cpp  steer_teleop.cpp  steer_teleop_repeater.cpp  vehicle_command.cpp  zoe_control.cpp
nextmove_code_source/can_zoe/src/ze40/: can_ze40.cpp  can_ze40_decoder.cpp  can_ze40_encoder.cpp
nextmove_code_source/can_zoe/src/ze40/vehicle_commands/: activation_robotization_command.cpp  options_command.cpp
nextmove_code_source/can_zoe/src/ze50/: can_ze50.cpp  can_ze50_decoder.cpp  can_ze50_encoder.cpp
nextmove_code_source/can_zoe/src/ze50/vehicle_commands/: acceleration_command.cpp  brake_command.cpp  rndb_command.cpp  steer_command.cpp
point cloud lidar/: README.md
point cloud lidar/pointcloud_preprocessed/: 00001.pcd  00002.pcd  00003.pcd  00004.pcd  00005.pcd  00006.pcd  00007.pcd  00008.pcd  00009.pcd  00010.pcd  00011.pcd  00012.pcd  00013.pcd  00014.pcd  00015.pcd  00016.pcd  00017.pcd  00018.pcd  00019.pcd  00020.pcd  00021.pcd  00022.pcd  00023.pcd  00024.pcd  00025.pcd  00026.pcd  00027.pcd  00028.pcd  00029.pcd  00030.pcd  00031.pcd  00032.pcd  00033.pcd  00034.pcd  00035.pcd  00036.pcd  00037.pcd  00038.pcd  00039.pcd  00040.pcd  (+3461 more)
